feature(catstep) add move left, right

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="catstep.css">
     </head>
     <body>
+        <h1>
+        <a href="#" data-name="catstep-move-left">←</a> 
+        <a href="#" data-name="catstep-move-right">→</a> 
+        </h1>
         <div data-name="catstep" class="catstep">
             <img src="catstep-right1.svg" class="catstep-image" data-name="catstep-right">
             <img src="catstep-right2.svg" class="catstep-image" data-name="catstep-right" hidden>
