feature(index) add github, favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <title>Cat Step</title>
         <link rel="stylesheet" href="catstep.css">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <h1>
-        <a href="#" data-name="catstep-move-left">←</a> 
-        <a href="#" data-name="catstep-move-right">→</a> 
+        Move the cat with
+        <a href="#" title="left" data-name="catstep-move-left">←</a> 
+        <a href="#" title="right" data-name="catstep-move-right">→</a> 
+        buttons
         </h1>
         <div data-name="catstep" class="catstep">
             <img src="catstep-right1.svg" class="catstep-image" data-name="catstep-right">
@@ -15,6 +18,10 @@
             <img src="catstep-left1.svg" class="catstep-image" data-name="catstep-left" hidden>
             <img src="catstep-left2.svg" class="catstep-image" data-name="catstep-left" hidden>
         </div>
+        <a href="https://github.com/coderaiser/catstep">
+            <img class="github-ribbon" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
+        </a>
+        
         <script src="catstep.js"></script>
     </body>
 </html>
