feature(catstep) add up, down buttons

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <body>
         <h1>
         Move the cat with
-        <a href="#" title="left" data-name="catstep-move-left">←</a> 
-        <a href="#" title="right" data-name="catstep-move-right">→</a> 
+        <a href="#" title="up" data-name="catstep-move-up">&uarr;</a> 
+        <a href="#" title="left" data-name="catstep-move-left">&larr;</a> 
+        <a href="#" title="right" data-name="catstep-move-right">&rarr;</a>
+        <a href="#" title="down" data-name="catstep-move-down">&darr;</a> 
         buttons
         </h1>
         <div data-name="catstep" class="catstep">
